자바9부터는 -Xlog:gc 옵션 사용해야되는 내용 추가